Fix header menu on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,9 +46,13 @@ h3 {
   height: $header-height;
   float: left;
 }
+.navbar-right {
+  float: right;
+}
 .nav > li {
   float: left;
 }
+
 .navbar-brand {
   height: $header-height !important;
   line-height: $header-height !important;
